<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Advanced SmsManager</string>
    <string name="action_settings">Settings</string>
    <string name="filter_msg">Text/Content To filter</string>
    <string name="newsms">SMS Incoming</string>
    <string name="contact_config">Contact Configuration</string>
    <string name="usage">To configure Spam Blocker/Filter, Open Settings</string>
    <string name="msg_config">Messsage Configuration</string>
    <string name="title_activity_app_settings">AppSettingsActivity</string>
    
    <!-- Strings used as key names in the preferences file -->
    <string name="contact">Contact Name or Number</string>
    <string name="duration">Blocking Duration</string>
    <string name="keepmsg">Keep Messages</string>
    <string name="about">About App</string>
    <string name="entering">Entering sms</string>
    <string name="readSettings">Read My Settings</string>
    <string name="msg_hint">Enter Message</string>
    <string name="mail">Send Email</string>
    <string name="sms">Read Message</string>
    <string name="exit">Exit </string>
    <string-array name="msg_type">
        <item name="type_plain_text">text messages</item>
        <item name="type_emails">email message</item>
        <item name="type_mms">mms message</item>
    </string-array>
    <string name="msg_type_default">text messages</string>
    <string-array name="menuitems">
        <item name="about">About App</item>
        <item name="help">Help</item>
        <item name="settings">Settings</item>
        <item name="quit">Exit</item>
    </string-array>
    <string-array name="smsloud">
        <item name="true">YES</item>
        <item name="false">NO</item>
    </string-array>
    <string name="msgdefault">NO</string>
    <string name="localedefault">US</string>
    <string name="locale">Choose Language</string>
    <!-- Default local languages to be used by the texttospeech engine -->
<string-array name="preferredlocale">
    <item name="canada">CANADA</item>
    <item name="canada_french">CANADA_FRENCH</item>
    <item name="china">CHINA</item>
    <item name="chinese">CHINESE</item>
    <item name="english">ENGLISH</item>
    <item name="france">FRANCE</item>
    <item name="french">FRENCH</item>
    <item name="german">GERMAN</item>
    <item name="germany">GERMANY</item>
    <item name="italian">ITALIAN</item>
    <item name="italy">ITALY</item>
    <item name="japan">JAPAN</item>
    <item name="japanese">JAPANESE</item>
    <item name="korea">KOREA</item>
    <item name="korean">KOREAN</item>
    <item name="prc">PRC</item>
    <item name="simplified_chinese">SIMPLIFIED_CHINESE</item>
    <item name="traditional_chinese">TRADITIONAL_CHINESE</item>
    <item name="taiwan">TAIWAN</item>
    <item name="uk">UK</item>
	<item name="us">US</item>    
    
</string-array>

</resources>